--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,14 @@ jobs:
         runs-on: ubuntu-latest
         steps:
         - uses: actions/checkout@v2
-        - name: Run test2 py
-          run: |
-            python3 test2.py
         - name: Run send_mail py
           run: |
             python3 send_mail.py
+    build2:
+        name: do job2
+        runs-on: ubuntu-latest
+        steps:
+        - uses: actions/checkout@v2
+        - name: Run test2 py
+          run: |
+            python3 test2.py
